--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Connect Wallet Interface -->
     <div id="connect-interface" class="interface">
-        <h1>Welcome to FrollSwap!</h1>
+        <h1>Welcome to 🔁 Swap FROLL ↔ VIC</h1>
         <p>Swap your tokens easily, quickly, and securely.</p>
         <button id="connect-wallet" class="button">Connect Wallet</button>
     </div>
