--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <!-- New Added Content Section -->
 <div id="new-content" class="interface">
-    <h2>🚀 FrollSwap.com – The Ultimate Smart Contract-Based Trading Platform! 🔥</h2>
+    <h2>🚀 The Ultimate Smart Contract-Based Trading Platform! 🔥</h2>
 
     <p>💎 <strong>100% Smart Contract-Powered – No manipulation, no interference!</strong></p>
     
