--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Connect Wallet Interface -->
     <div id="connect-interface" class="interface">
         <h1>Welcome to Froll.net</h1>
-        <p>Swap your tokens easily, quickly, and securely.</p>
+        <p>Open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
         <button id="connect-wallet" class="button">Connect Wallet</button>
     </div>
     <!-- New Added Content Section -->
