--- a/index.html
+++ b/index.html
@@ -29,19 +29,21 @@
     </div>
     <!-- New Added Content Section -->
 <div id="new-content" class="interface">
+
     <h2>🧭 Add Viction Network & Add FROLL Token to MetaMask</h2>
 
-    <p>💎 <strong>100% Smart Contract-Powered – No manipulation, no interference!</strong></p>
-    
-    <ul class="feature-list">
-        <li>✅ <strong>No middlemen</strong> – Just you & the blockchain.</li>
-        <li>✅ <strong>Trade FROLL (FROLL/VIC) fully automated</strong> – No approvals needed.</li>
-        <li>✅ <strong>Transparent transactions</strong> – Track everything on the blockchain.</li>
-        <li>✅ <strong>Absolute security</strong> – No user data stored.</li>
-    </ul>
+<ul class="feature-list">
+    <li>🧩 <strong>Add Viction Network</strong><br>
+        RPC: <code>https://rpc.viction.xyz</code><br>
+        Chain ID: <code>88</code><br>
+        Symbol: <code>VIC</code> | Explorer: <code>https://vicscan.xyz</code>
+    </li>
+    <li>🔔 <strong>Add FROLL Token</strong><br>
+        Contract: <code>0xB4d562A8f811CE7F134a1982992Bd153902290BC</code><br>
+        Symbol: <code>FROLL</code> | Decimals: <code>18</code>
+    </li>
+</ul>
 
-    <p>🔹 <strong>FrollSwap.com is a fully decentralized application (DApp)!</strong></p>
-    <p>🔹 <strong>With Web3 wallets (Viction, MetaMask, TrustWallet...), you can trade FROLL instantly!</strong></p>
 
     <h2>💎 FROLL Token – A Scarce Asset on VIC Blockchain</h2>
 
