--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div id="new-content" class="interface">
-        <h2>🧭 Add Viction Network & FROLL Token</h2>
+        <h2>🧭 Add Viction Network & FROLL Token to MetaMask</h2>
         <ul class="feature-list">
             <li>🧩 <strong>Add Viction Network</strong><br>
                 RPC: <span class="copy-box" onclick="copyText(this)">https://rpc.viction.xyz</span><br>
@@ -42,8 +42,6 @@
         <h2>🎮 Explore the FROLL Ecosystem</h2>
         <ul class="feature-list">
             <li>🎟️ <a href="https://Lottery.vin" target="_blank">Lottery.vin</a> – Fully on-chain decentralized lottery</li>
-            <li>⚪ <a href="https://Froll.org" target="_blank">Froll.org</a> – Xóc đĩa (Even/Odd) betting game (coming soon)</li>
-            <li>🎡 <a href="https://Roulette.vin" target="_blank">Roulette.vin</a> – Web3 roulette game (coming soon)</li>
         </ul>
 
         <h2>💎 FROLL Token – A Scarce Asset on VIC Blockchain</h2>
