--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <img src="froll_48.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
         <span id="froll-price" class="froll-price" style="font-weight: bold; font-size: 24px; color: #007bff; display: block; text-align: center; margin-top: 20px;">Loading price...</span>
         
-        <p style="font-size: 14px; color: #555;">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
-
         <div class="button-container">
             <button id="connect-wallet" class="button">Connect Wallet</button>
         </div>
+        
+        <!-- Đặt dòng chữ nhỏ dưới nút Connect Wallet -->
+        <p style="font-size: 12px; color: #555; text-align: center; margin-top: 10px;">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
     </div>
 
     <div id="new-content" class="interface">
