--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="connect-interface" class="interface">
-        <img src="froll_48.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
+        <img src="128.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
         <span id="froll-price" class="froll-price" style="font-weight: bold; font-size: 24px; color: #007bff; display: block; text-align: center; margin-top: 20px;">Loading price...</span>
         
         <div class="button-container">
