--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,22 @@
     <link rel="icon" href="froll_48.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- Kết nối ví -->
     <div id="connect-interface" class="interface">
         <img src="128.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
         <span id="froll-price" class="froll-price" style="font-weight: bold; font-size: 24px; color: #007bff; display: block; text-align: center; margin-top: 20px;">Loading price...</span>
-        
+
         <div class="button-container">
             <button id="connect-wallet" class="button">Connect Wallet</button>
         </div>
-        
-        <!-- Đặt dòng chữ nhỏ dưới nút Connect Wallet -->
+
         <p style="font-size: 12px; color: #555; text-align: center; margin-top: 10px;">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
     </div>
 
-    <div id="new-content" class="interface">
+    <!-- Nội dung khi kết nối -->
+    <div id="new-content" class="interface" style="display: none;">
         <h2>🧭 Add Viction Network & FROLL Token to MetaMask</h2>
         <ul class="feature-list">
             <li>🧩 <strong>Add Viction Network</strong><br>
@@ -49,6 +52,7 @@
         </ul>
     </div>
 
+    <!-- Giao diện Swap -->
     <div id="swap-interface" class="interface" style="display: none;">
         <header class="swap-header">
             <div id="wallet-address" class="wallet-address"></div>
@@ -80,7 +84,8 @@
         <button id="swap-now" class="button">Swap Now</button>
     </div>
 
-    <footer class="footer">
+    <!-- Chân trang và mạng xã hội -->
+    <footer id="footer" class="footer">
         <div class="social-links">
             <a href="https://t.me/FortuneRolls" target="_blank">Join Telegram</a>
             <a href="https://x.com/FortuneRolls" target="_blank">Follow X</a>
@@ -98,4 +103,5 @@
     </script>
     <script src="app.js"></script>
 </body>
+
 </html>
