--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <!-- Kết nối ví -->
     <div id="connect-interface" class="interface">
         <img src="128.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
-        <span id="froll-price" class="froll-price" style="font-weight: bold; font-size: 24px; color: #007bff; display: block; text-align: center; margin-top: 20px;">Loading price...</span>
+        <span id="froll-price" class="froll-price" style="font-weight: bold; font-size: 24px; color: #FFD700; display: block; text-align: center; margin-top: 20px;">Loading price...</span>
 
         <div class="button-container">
             <button id="connect-wallet" class="button">Connect Wallet</button>
         </div>
+
         <p class="italic-bold" style="font-size: 12px; color: #555; text-align: center; margin-top: 10px;">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
     </div>
 
