--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="italic-bold" style="font-size: 12px; color: #555; text-align: center; margin-top: 10px;">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
     </div>
 
-    <!-- Nội dung khi kết nối ví -->
+    <!-- Nội dung khi kết nối -->
     <div id="new-content" class="interface" style="display: none;">
         <h2>🧭 Add Viction Network & FROLL Token to MetaMask</h2>
         <ul class="feature-list">
