--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         </div>
 
         <!-- Cập nhật phần dòng chữ -->
-        <p class="italic-bold">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
+        <div class="equal-width-segments">
+            <div class="segment">
+                <span id="froll-price" class="froll-price">1 FROLL = 28.47 USD</span>
+            </div>
+            <div class="segment">
+                <p class="italic-bold">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
+            </div>
+        </div>
     </div>
 
     <!-- Nội dung khi kết nối -->
