--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
         <p><strong>Blockchain:</strong> Viction (VIC)</p>
         <p><strong>Max Supply:</strong> 1,000,000</p>
         <p><strong>Contract:</strong> <a href="https://www.vicscan.xyz/token/0xB4d562A8f811CE7F134a1982992Bd153902290BC" target="_blank">View on VicScan</a></p>
-
+    
         <h2>🎮 Explore the FROLL Ecosystem</h2>
         <ul class="feature-list">
             <li>🎟️ <a href="https://Lottery.vin" target="_blank">Lottery.vin</a> – Fully on-chain decentralized lottery</li>
+            <li>🎲 <a href="https://Froll.org" target="_blank">Froll.org</a> – Provably fair blockchain dice game</li>
         </ul>
     </div>
 
