--- a/index.html
+++ b/index.html
@@ -1,115 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Froll.net - Swap FROLL/VIC</title>
-    <link rel="icon" href="froll_48.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Froll.net — On-chain Social + Swap</title>
+  <meta name="description" content="Post fully on-chain with FROLL and swap FROLL ↔ VIC directly on Froll.net. 100% decentralized." />
+  <link rel="icon" href="froll_48.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-    <!-- Kết nối ví -->
-    <div id="connect-interface" class="interface">
-        <img src="128.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
-        
-        <!-- Thêm div bao quanh giá FROLL và đoạn thông báo để có độ rộng bằng nhau -->
-        <div class="equal-width-segments">
-            <div class="segment">
-                <span id="froll-price" class="froll-price">Loading price...</span>
-            </div>
-            <div class="segment">
-                <p class="italic-bold">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
-            </div>
-        </div>
-
-        <div class="button-container">
-            <button id="connect-wallet" class="button">Connect Wallet</button>
-        </div>
+  <!-- Top Nav -->
+  <header class="nav">
+    <div class="nav-left">
+      <img src="128.png" alt="FROLL" class="logo" />
+      <h1 class="brand">Froll.net</h1>
     </div>
-
-    <!-- Nội dung khi kết nối -->
-    <div id="new-content" class="interface" style="display: none;">
-        <h2>🧭 Add Viction Network & FROLL Token to MetaMask</h2>
-        <ul class="feature-list">
-            <li>🧩 <strong>Add Viction Network</strong><br>
-                RPC: <span class="copy-box" onclick="copyText(this)">https://rpc.viction.xyz</span><br>
-                Chain ID: <span class="copy-box" onclick="copyText(this)">88</span><br>
-                Symbol: <span class="copy-box" onclick="copyText(this)">VIC</span><br>
-                Explorer: <span class="copy-box" onclick="copyText(this)">https://vicscan.xyz</span>
-            </li>
-            <li>🔔 <strong>Add FROLL Token</strong><br>
-                Contract: <span class="copy-box" onclick="copyText(this)">0xB4d562A8f811CE7F134a1982992Bd153902290BC</span><br>
-                Symbol: <span class="copy-box" onclick="copyText(this)">FROLL</span><br>
-                Decimals: <span class="copy-box" onclick="copyText(this)">18</span>
-            </li>
-        </ul>
-
-        <h2>💎 FROLL Token – A Scarce Asset on VIC Blockchain</h2>
-        <p><strong>Name:</strong> FortuneRolls</p>
-        <p><strong>Symbol:</strong> FROLL</p>
-        <p><strong>Blockchain:</strong> Viction (VIC)</p>
-        <p><strong>Max Supply:</strong> 1,000,000</p>
-        <p><strong>Contract:</strong> <a href="https://www.vicscan.xyz/token/0xB4d562A8f811CE7F134a1982992Bd153902290BC" target="_blank">View on VicScan</a></p>
-    
-        <h2>🎮 Explore the FROLL Ecosystem</h2>
-        <ul class="feature-list">
-            <li>🎟️ <a href="https://Lottery.vin" target="_blank">Lottery.vin</a> – Fully on-chain decentralized lottery</li>
-            <li>🎲 <a href="https://Froll.org" target="_blank">Froll.org</a> – Provably fair blockchain dice game</li>
-        </ul>
+    <div class="nav-center">
+      <span id="froll-price-usd" class="price">Loading price...</span>
     </div>
-
-    <!-- Giao diện Swap -->
-    <div id="swap-interface" class="interface" style="display: none;">
-        <header class="swap-header">
-            <div id="wallet-address" class="wallet-address"></div>
-            <button id="disconnect-wallet" class="button">Disconnect Wallet</button>
-        </header>
-        <h1>Swap</h1>
-        <div class="swap-container">
-            <div class="token-input">
-                <img id="from-token-logo" src="vic_24.png" alt="From Token">
-                <div>
-                    <p id="from-token-info">VIC: 0.0000</p>
-                    <input type="number" id="from-amount" placeholder="0.0">
-                </div>
-                <button id="max-button" class="button">Max</button>
-            </div>
-            <button id="swap-direction" class="swap-direction">↔️</button>
-            <div class="token-input">
-                <img id="to-token-logo" src="froll_24.png" alt="To Token">
-                <div>
-                    <p id="to-token-info">FROLL: 0.0000</p>
-                    <input type="text" id="to-amount" placeholder="0.0" disabled>
-                </div>
-            </div>
-        </div>
-        <div class="swap-details">
-            <p id="transaction-fee">Transaction Fee: 0.01 VIC</p>
-            <p id="gas-fee">Estimated Gas Fee: ~0.000029 VIC</p>
-        </div>
-        <button id="swap-now" class="button">Swap Now</button>
+    <div class="nav-right">
+      <button id="swap-toggle" class="btn ghost" title="Swap FROLL/VIC">Swap FROLL/VIC</button>
+      <button id="connect-btn" class="btn primary">Connect Wallet</button>
     </div>
+  </header>
 
-    <!-- Chân trang và mạng xã hội -->
-    <footer id="footer" class="footer">
-        <div class="social-links">
-            <a href="https://t.me/FortuneRolls" target="_blank">Join Telegram</a>
-            <a href="https://x.com/FortuneRolls" target="_blank">Follow X</a>
+  <main class="container">
+
+    <!-- Swap Panel (hidden by default) -->
+    <section id="swap-panel" class="card hide" aria-hidden="true">
+      <h2>Swap FROLL ↔ VIC</h2>
+      <div class="swap-grid">
+        <div class="swap-side">
+          <label for="from-token">From</label>
+          <select id="from-token">
+            <option value="VIC">VIC</option>
+            <option value="FROLL">FROLL</option>
+          </select>
+          <input id="from-amount" type="number" placeholder="0.0" min="0" step="any" />
         </div>
-    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-    <script>
-        function copyText(el) {
-            const t = el.textContent.trim();
-            navigator.clipboard.writeText(t)
-                .then(() => alert("✅ Copied: " + t))
-                .catch(err => console.error("Copy failed!", err));
-        }
-    </script>
-    <script src="app.js"></script>
+        <div class="swap-arrow" aria-hidden="true">↔</div>
+
+        <div class="swap-side">
+          <label for="to-token">To</label>
+          <select id="to-token">
+            <option value="FROLL">FROLL</option>
+            <option value="VIC">VIC</option>
+          </select>
+          <input id="to-amount" type="number" placeholder="0.0" min="0" step="any" disabled />
+        </div>
+      </div>
+      <p class="meta" id="swap-fees">Fee: 0.01 VIC • Rate: 1 FROLL = 100 VIC</p>
+      <button id="swap-btn" class="btn accent">Swap Now</button>
+    </section>
+
+    <!-- Profile + Composer -->
+    <section class="grid">
+      <aside class="card">
+        <h2>Your Profile</h2>
+        <p id="wallet-short">Not connected</p>
+        <p class="meta">Register fee: 0.001 FROLL</p>
+        <button id="register-btn" class="btn secondary">Register</button>
+        <hr style="border:none;border-top:1px solid #eee;margin:12px 0;">
+        <div class="meta">
+          <div>Contract: <code id="contract-address">0x28c642682b1E1458d922C4226a7192F5B8953A74</code></div>
+          <div>Token: <code>FROLL</code> on VIC</div>
+        </div>
+      </aside>
+
+      <section class="card flex-1">
+        <h2>New Post</h2>
+        <textarea id="post-content" rows="8" placeholder="Write on-chain (≤ 60KB). New lines will be preserved. You can paste any language. URLs like https://lottery.vin will be clickable."></textarea>
+        <div class="row">
+          <span id="byte-counter" class="meta">0 / 60000 bytes</span>
+          <button id="post-btn" class="btn primary">Post On-chain</button>
+        </div>
+        <p class="meta" id="post-hint">Tip: Long posts cost more gas. Keep it concise when possible.</p>
+      </section>
+    </section>
+
+    <!-- Feed -->
+    <section class="card">
+      <h2>Latest Posts</h2>
+      <div id="feed"></div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <span>© Froll.net • 100% on-chain social • Built for VIC • <a href="https://froll.org" target="_blank" rel="noopener noreferrer">Froll.org</a></span>
+  </footer>
+
+  <!-- Scripts -->
+  <script>
+    // Expose contract constants for app.js
+    window.FROLL_SOCIAL_ADDRESS = "0x28c642682b1E1458d922C4226a7192F5B8953A74";  // deployed
+    window.FROLL_TOKEN_ADDRESS  = "0xB4d562A8f811CE7F134a1982992Bd153902290BC";  // FROLL on VIC
+    window.SWAP_CONTRACT_ADDRESS = "0x9197BF0813e0727df4555E8cb43a0977F4a3A068"; // fixed-rate swap (1 FROLL = 100 VIC)
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+  <script src="app.js"></script>
 </body>
-
 </html>
